Fixing a couple issues from Stacy's commit which somehow (dunno how) was able to commit some things that were out of date (aka a non-fast-forward commit which usually git prevents), these were two lines in the routes which I am restoring in this commit. A couple other minor improvements: disable turbolinks for #section links so as not to induce a page load from the server anymore, and fix the alignment of the callout icons on technical area pages.

--- a/app/assets/stylesheets/benchmark-document.scss
+++ b/app/assets/stylesheets/benchmark-document.scss
@@ -1,7 +1,7 @@
 .benchmark-document {
 
   .callout-with-icon {
-    @include make-row();
+    @include make-row(0);
     h3 {
       margin-bottom: 0;
     }
